added support for negative values in slider

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 
                     <div class="container">
                       <px-slider
+                        id="slider_{{indexPlusOne(index)}}"
                         value="{{item.value}}"
                         min="{{item.min}}"
                         max="{{item.max}}"
