--- a/px-handle.html
+++ b/px-handle.html
@@ -90,6 +90,7 @@ Handle element for the single handle for px-slider
      * @param event
      */
     handleDown: function(event) {
+      //Polymer function to change the ability edit a readonly value
       this._setTracking(true);
     },
     /**
@@ -98,6 +99,7 @@ Handle element for the single handle for px-slider
      * @param  event
      */
     handleUp: function(event) {
+      //Polymer function to change the ability edit a readonly value
       this._setTracking(false);
     },
     /**
