--- a/test/fixture.html
+++ b/test/fixture.html
@@ -31,8 +31,8 @@
 <!-- You use the document as a place to set up your fixtures. -->
 <px-slider value="10" id="px_slider_simple"></px-slider>
 <px-slider min="5.00" max="40.00" value="10.00" step=".01" id="px_slider_complex"></px-slider>
-<px-slider range="true" start-value="10" end-value="20" id="px_slider_range"></px-slider>
+<px-slider start-value="10" end-value="20" id="px_slider_range"></px-slider>
 <px-slider value="10" disabled="true" id="px_slider_disabled"></px-slider>
-
+<px-slider start-value="-30" end-value="20" min="-40" max="100" id="px_slider_range_neg"></px-slider>
 </body>
 </html>
