--- a/px-slider.html
+++ b/px-slider.html
@@ -51,75 +51,6 @@ Allow the user to select a value or range of values within a specified min and m
       Polymer.IronResizableBehavior
     ],
 
-    ready: function() {
-      // Must have min and max values
-      // FATAL
-      if (!this.min && this.min !== 0) {
-        throw "Missing a minimum value (min).";
-      } else if (!this.max && this.max !== 0) {
-        throw "Missing a maximum value (max).";
-      }
-
-      // Do we have a start value and end value?
-      if ( (this.startValue || this.startValue === 0) &&
-           (this.endValue || this.endValue === 0) ) {
-
-        // If so, this is a range.
-        this._range = true;
-        this.value = this.startValue;
-
-        // Show the start handle and the end input and end handle
-        this.toggleClass('visuallyhidden', false, this.$.startHandle);
-        this.toggleClass('visuallyhidden', false, this.$.endHandle);
-        this.toggleClass('visuallyhidden', false, this.$.inputEnd);
-
-        // add class to make style adjustments specific to the multi handle version
-        this.toggleClass('slider__multi', true, this.$.sliderContainer);
-
-        // Let's do some extra error checking to protect developers from themselves
-        // Not fatal, but probably not intentional.
-        if ( this.value > this.endvalue) {
-          console.warn("Your starting value can't be greater than your ending value.");
-          this.value = this.endValue;
-        } else if (this.value % this.step !== 0 ) {
-          console.warn("Your value doesn't match your step: the value needs to be evenly divisible by the step attribute.");
-        } else if (this.endValue % this.step !== 0 ) {
-          console.warn("Your end value doesn't match your step: the end value needs to be evenly divisible by the step attribute.");
-        }
-
-        // Cleanup values, just in case
-        this.value = this._cleanValue(this.value);
-        this.endValue = this._cleanValue(this.endValue);
-
-        // Have to wait for the DOM to finish loading
-        // And then refire these
-        this.async(function() {
-          // calculate the amount to offset the range on the right for handle width
-          this.offsetForHandleWidth = this._calcOffsetWidth(2);
-
-          // move handles into starting position
-          this._updateHandle(this.$.startHandle, this.value);
-          this._updateHandle(this.$.endHandle, this.endValue);
-        }, 1);
-      } else {
-
-        if (!this.value && this.value !== 0) {
-          throw "Oops, I need a starting value. Did you set the 'value' attribute?";
-        }
-
-        // Show the single handle
-        this.toggleClass('visuallyhidden', false,  this.$.singleHandle);
-
-        this.async(function() {
-          // calculate the amount to offset the range on the right for handle width
-          this.offsetForHandleWidth = this._calcOffsetWidth(22);
-
-          // move handle into initial position
-          this._updateHandle(this.$.singleHandle, this.value);
-        }, 1);
-      }
-    },
-
     /**
      * Properties block, expose attribute values to the DOM via 'reflect'
      *
@@ -196,6 +127,75 @@ Allow the user to select a value or range of values within a specified min and m
       'iron-resize': '_onIronResize'
     },
 
+    ready: function() {
+      // Must have min and max values
+      // FATAL
+      if (!this.min && this.min !== 0) {
+        throw "Missing a minimum value (min).";
+      } else if (!this.max && this.max !== 0) {
+        throw "Missing a maximum value (max).";
+      }
+
+      // Do we have a start value and end value?
+      if ( (this.startValue || this.startValue === 0) &&
+           (this.endValue || this.endValue === 0) ) {
+
+        // If so, this is a range.
+        this._range = true;
+        this.value = this.startValue;
+
+        // Show the start handle and the end input and end handle
+        this.toggleClass('visuallyhidden', false, this.$.startHandle);
+        this.toggleClass('visuallyhidden', false, this.$.endHandle);
+        this.toggleClass('visuallyhidden', false, this.$.inputEnd);
+
+        // add class to make style adjustments specific to the multi handle version
+        this.toggleClass('slider__multi', true, this.$.sliderContainer);
+
+        // Let's do some extra error checking to protect developers from themselves
+        // Not fatal, but probably not intentional.
+        if ( this.value > this.endvalue) {
+          console.warn("Your starting value can't be greater than your ending value.");
+          this.value = this.endValue;
+        } else if (this.value % this.step !== 0 ) {
+          console.warn("Your value doesn't match your step: the value needs to be evenly divisible by the step attribute.");
+        } else if (this.endValue % this.step !== 0 ) {
+          console.warn("Your end value doesn't match your step: the end value needs to be evenly divisible by the step attribute.");
+        }
+
+        // Cleanup values, just in case
+        this.value = this._cleanValue(this.value);
+        this.endValue = this._cleanValue(this.endValue);
+
+        // Have to wait for the DOM to finish loading
+        // And then refire these
+        this.async(function() {
+          // calculate the amount to offset the range on the right for handle width
+          this.offsetForHandleWidth = this._calcOffsetWidth(2);
+
+          // move handles into starting position
+          this._updateHandle(this.$.startHandle, this.value);
+          this._updateHandle(this.$.endHandle, this.endValue);
+        }, 1);
+      } else {
+
+        if (!this.value && this.value !== 0) {
+          throw "Oops, I need a starting value. Did you set the 'value' attribute?";
+        }
+
+        // Show the single handle
+        this.toggleClass('visuallyhidden', false,  this.$.singleHandle);
+
+        this.async(function() {
+          // calculate the amount to offset the range on the right for handle width
+          this.offsetForHandleWidth = this._calcOffsetWidth(22);
+
+          // move handle into initial position
+          this._updateHandle(this.$.singleHandle, this.value);
+        }, 1);
+      }
+    },
+
     /**
      * This will be called by the parents through the iron-resizable-behavior
      * when they know the slider has been resized or made visible.
@@ -265,24 +265,23 @@ Allow the user to select a value or range of values within a specified min and m
       var slider = this;
       //this is here to ensure that when we get many consecutive jumps, we debounce them, instead of calculating each one.
       if (slider.debounce) {
-        slider.debounce(
-          'slider_move_end', function() {
-            var clean = this._cleanValue(newValue);
+        slider.debounce('slider_move_end', function() {
+          var clean = this._cleanValue(newValue);
+          // If this is a range, don't go below the start value
+          if (this._range && clean < this.value) {
+            clean = this.value;
+          }
 
-            // If this is a range, don't go below the start value
-            if (this._range && clean < this.value) {
-              clean = this.value;
-            }
+          // If it's a range, we update the end handle; otherwise update the single handle
+          var handle = (this._range) ? this.$.endHandle : this.$.singleHandle;
+          this._updateHandle(handle, clean);
 
-            // If it's a range, we update the end handle; otherwise update the single handle
-            var handle = (this._range) ? this.$.endHandle : this.$.singleHandle;
-            this._updateHandle(handle, clean);
-
-            // Update endValue with the cleaned value
-            this.endValue = clean;
-          }, 1);
-        }
+          // Update endValue with the cleaned value
+          this.endValue = clean;
+        }, 1);
+      }
     },
+
     /**
      * Function that is called if the min attribute on px-slider is changed
      * --Ensures the value is valid, matches step size, etc
@@ -412,6 +411,18 @@ Allow the user to select a value or range of values within a specified min and m
 
       return clean;
     },
+
+    _convertValueToPosition: function(myvalue) {
+      // add offset so end handle stops at end of tracking
+      var cW = this.offsetForHandleWidth;
+
+      // What is the ratio of the value to the range?
+      var ratio = (myvalue - this.min) / (this.max - this.min);
+
+      // Multiple by the width of the container
+      return ratio * cW;
+
+    },
     /**
      * Helper func to calc the "left:Xpx" style used to moving the handle and progress bar
      * - Progress bar for multi-handle needs add a bit to make minor alignment adjustments.
@@ -423,14 +434,7 @@ Allow the user to select a value or range of values within a specified min and m
       // if extra was passed in, use it, otherwise it is 0.
       extra = extra || 0;
 
-      // add offset so end handle stops at end of tracking
-      var cW = this.offsetForHandleWidth;
-
-      // What is the ratio of the value to the max?
-      var ratio = myvalue / this.max;
-
-      // Multiple by the width of the container
-      var position = ratio * cW;
+      var position = this._convertValueToPosition(myvalue);
 
       return position + extra + 'px';
     },
@@ -452,7 +456,7 @@ Allow the user to select a value or range of values within a specified min and m
       var ratio = mypos / cW;
 
       // Convert to value; have to account min values other than 0
-      var value = ratio * (this.max - this.min);
+      var value = ratio * (this.max - this.min) + this.min;
 
       return this._cleanValue(value);
     },
@@ -464,7 +468,6 @@ Allow the user to select a value or range of values within a specified min and m
      * @param value
      */
     _updateHandle: function(handle, value) {
-
       // Determine new x position from value
       var newPos = this._translateValueToPosition(value);
 
@@ -490,17 +493,19 @@ Allow the user to select a value or range of values within a specified min and m
       var progressValue,
           progressPosition;
 
+      console.log("range is: " + this._range)
       // Am I a range or a single value?
       if(this._range){
-        progressValue = this.endValue - this.value;
+
+        progressValue = this._convertValueToPosition(this.endValue) - this._convertValueToPosition(this.value);
         progressPosition = this.value;
 
         // Set the width and the position (for ranges)
-        this.$.sliderSelected.style.width = this._translateValueToPosition(progressValue,2);
+        this.$.sliderSelected.style.width = progressValue + 2 +'px';
         this.$.sliderSelected.style.left = this._translateValueToPosition(progressPosition,-1);
       } else {
         progressValue = this.value;
-        progressPosition = 0;
+        progressPosition = this.min;
 
         // Set the width and the position (for ranges)
         this.$.sliderSelected.style.width = this._translateValueToPosition(progressValue);
