fixed init errors with min and max

--- a/px-handle-multi.html
+++ b/px-handle-multi.html
@@ -142,11 +142,11 @@ Handle Element expected to be used in px-slider
       // this.toggleClass('start', bool, this.$.multiHandleSVG);
       // So do it the old fashioned way...
 
-      this._setClassOnSVG(this.$.multiHandleSVG,bool,'start');
-
-      this.toggleClass('start', bool);
-      this.toggleClass('end', !bool);
-      if(bool){
+      // this._setClassOnSVG(this.$.multiHandleSVG,bool,'start');
+      //
+      // this.toggleClass('start', bool);
+      // this.toggleClass('end', !bool);
+      if(bool) {
         this.$.handleDropShadow.setAttribute('transform',"translate(0 -2)");
       }
     },
@@ -160,6 +160,10 @@ Handle Element expected to be used in px-slider
      */
     _setClassOnSVG: function(elem,bool,classname){
       var existingClass = elem.getAttribute('class');
+
+      if(!existingClass) {
+        existingClass = '';
+      }
 
       if(bool){
         var allClasses = existingClass + ' ' + classname;
