--- a/px-slider.html
+++ b/px-slider.html
@@ -33,8 +33,8 @@ Allow the user to select a value or range of values within a specified min and m
       <input id="inputStart" type="text" class="text-input" value="{{value}}" on-change="_handleStartChange" tabindex="0" disabled="{{disabled}}"/>
       <div id="sliderContainer" class="slider flex__item" on-click="_jumpToValue">
         <div id="sliderSelected" class="slider__selected"></div>
-        <px-handle-multi id="startHandle" class="visuallyhidden" on-track="_handleTrackStart" handle-rotate disabled="{{disabled}}"></px-handle-multi>
-        <px-handle-multi id="endHandle" class="visuallyhidden" on-track="_handleTrackEnd" disabled="{{disabled}}"></px-handle-multi>
+        <px-handle-multi id="startHandle" class="start visuallyhidden" on-track="_handleTrackStart" handle-rotate disabled="{{disabled}}"></px-handle-multi>
+        <px-handle-multi id="endHandle" class="end visuallyhidden" on-track="_handleTrackEnd" disabled="{{disabled}}"></px-handle-multi>
         <px-handle id="singleHandle" class="visuallyhidden" on-track="_handleTrackEnd" disabled="{{disabled}}"></px-handle>
       </div>
       <input id="inputEnd" type="text" class="text-input visuallyhidden" value="{{endValue}}" on-change="_handleEndChange" tabindex="0" disabled="{{disabled}}"/>
