added style variables for theming

--- a/px-slider.html
+++ b/px-slider.html
@@ -17,6 +17,16 @@ Allow the user to select a value or range of values within a specified min and m
 
     <px-slider value="50" min="1" max="100"></px-slider>
 
+### Styling
+The following custom properties are available for styling:
+
+Custom property | Description | Default
+----------------|-------------|----------
+`--px-slider-border-color` | Border color for the unselected portion of the slider | `$gray5`
+`--px-slider-background-color` | Background color for the unselected portion of the slider | `$gray1`
+`--px-slider-selected-border-color` | Border color for the selected portion of the slider | `$select-blue-pressed`
+`--px-slider-selected-background-color` | Background color for the selected portion of the slider | `$select-blue-default`
+
 @element px-slider
 @blurb Allow the user to select a value or range of values within a specified min and max.
 @homepage index.html
